# lab-5x-AndreiCotor

./: .gitignore  README.md
backend/: .dockerignore  .env  Cargo.toml  Dockerfile  diagram.mdj  docker-compose-deploy.yml  docker-compose.yml
backend/ai/: Dockerfile  ai.py  model  requirements.txt
backend/migrations/2023-03-12-161208_problems/: down.sql  up.sql
backend/migrations/2023-03-17-110338_contest/: down.sql  up.sql
backend/migrations/2023-03-18-172026_participates/: down.sql  up.sql
backend/migrations/2023-04-10-114737_add_description_to_contest/: down.sql  up.sql
backend/migrations/2023-04-24-113324_fk_indexes/: down.sql  up.sql
backend/migrations/2023-04-30-143139_user_credential/: down.sql  up.sql
backend/migrations/2023-05-06-204040_userid_every_entity/: down.sql  up.sql
backend/migrations/2023-05-07-101037_add_registration/: down.sql  up.sql
backend/migrations/2023-05-07-151327_add_role/: down.sql  up.sql
backend/migrations/2023-05-07-175450_add_index_userid/: down.sql  up.sql
backend/migrations/2023-05-08-115150_add_pagination_options/: down.sql  up.sql
backend/migrations/2023-05-22-124247_keep_chat/: down.sql  up.sql
backend/nginx/: fullchain.pem  privkey.pem
backend/nginx/conf/: problemarena.mooo.com.conf
backend/nginx/conf.d/: default.conf
backend/src/: main.rs  schema.rs
backend/src/controller/: admin_controller.rs  authentication_controller.rs  chat_controller.rs  contest_controller.rs  hate_speech.rs  mod.rs  participates_controller.rs  problem_controller.rs  submission_controller.rs  user_controller.rs
(+91 files in other folders)
