[package]
name = "problem-arena-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
async-trait = "0.1.65"
serde = {version = "1.0.152", features = ["derive"]}
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "serde_json"] }
dotenvy = "0.15"
r2d2 = "0.8.10"
serde_json = "1.0.94"
actix-cors = "0.6.4"
password-hash = "0.5.0"
argon2 = "0.5.0"
actix-web-httpauth = "0.8.0"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.6"